# ESP32-S3-RGB-Matrix

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: AnimatedGIF.h.62B24AE8FF40EE6C.idx  EVE_commands.c.4D5B88C1B5C3133D.idx  EVE_supplemental.c.00912777D8B2CC55.idx  all_white.c.86C785D1DDBBB4D5.idx  all_white.h.8BE28945B956D31F.idx  animimg001.c.EB5C928236EB378A.idx  animimg002.c.9FC408AB72064B24.idx  animimg003.c.4EE103A140BCC8C3.idx  audio_codec_ctrl_i2c.c.62195E110E33A808.idx  audio_codec_ctrl_if.h.BCDE92DD52304CD1.idx  audio_codec_ctrl_spi.c.E64BF3CE3B921BA4.idx  audio_codec_data_i2s.c.1E34C475F078D28F.idx  audio_codec_data_if.h.6E4ABB42455736DF.idx  audio_codec_gpio.c.204DD674238402D6.idx  audio_codec_gpio_if.h.A451944822E74F4D.idx  audio_codec_if.h.633A6A089F6F081A.idx  audio_codec_sw_vol.c.4002609FAE7F808F.idx  audio_codec_sw_vol.h.9BDBE9488621AB95.idx  audio_codec_vol_if.h.A3717311A699C2E0.idx  audio_service.c.4C4E24CF6F7B0402.idx  audio_service.h.D7A37E6717B4BA25.idx  aw88298.c.1393DD341B83C348.idx  aw88298_dac.h.2F6DFC658EA607C1.idx  aw88298_reg.h.FB4C723539BB837E.idx  bsp_err_check.h.EA297FF27BBAF1B0.idx  chromatic.c.11B80F8D63857ED8.idx  code128.c.DEAE09CADD662B2B.idx  color_convert.cpp.763BF8DC570354F2.idx  color_convert.h.ABADBD2369238E26.idx  color_lut.cpp.382ED59A9B54F9CE.idx  color_lut.h.13E7DE27E21C4097.idx  (+1302 more)
components/Service/: CMakeLists.txt
components/Service/Audio_Service/: audio_service.c  audio_service.h
components/Service/Key_Service/: key_service.c  key_service.h
components/Service/RTC_Service/: rtc_service.c  rtc_service.h
components/Service/SD_Service/: sdcard_service.c  sdcard_service.h
components/Service/Sensor_Service/: sensor_service.c  sensor_service.h
components/Service/WiFi_Service/: wifi_service.c  wifi_service.h
components/bsp/esp32_s3_matrix/: CMakeLists.txt  IDF_BSP.c  IDF_BSP.h  Kconfig  esp32_s3_matrix.c  hub75_bridge.cpp  idf_component.yml
components/bsp/esp32_s3_matrix/include/bsp/: config.h  display.h  esp-bsp.h  esp32_s3_matrix.h
components/bsp/extra_bsp/: CMakeLists.txt  extra_bsp.c  extra_bsp.h
example/idf_v5.5.2/: CMakeLists.txt  partitions.csv
example/idf_v5.5.2/components/Middleware/: CMakeLists.txt  idf_component.yml
example/idf_v5.5.2/components/Middleware/Audio/: middle_audio.c  middle_audio.h
example/idf_v5.5.2/components/Middleware/RTC/: middle_rtc.c  middle_rtc.h
example/idf_v5.5.2/components/Middleware/SD/: middle_sdcard.c  middle_sdcard.h
example/idf_v5.5.2/components/Middleware/Sensor/: middle_sensor.c  middle_sensor.h
example/idf_v5.5.2/components/Middleware/UI/: common_ui.c  common_ui.h
example/idf_v5.5.2/components/Middleware/WiFi/: middle_wifi.c  middle_wifi.h
example/idf_v5.5.2/components/bsp/esp32_s3_matrix/: CMakeLists.txt  Kconfig  README.md  esp32_s3_matrix.c  hub75_bridge.cpp  idf_component.yml
example/idf_v5.5.2/components/bsp/esp32_s3_matrix/include/bsp/: config.h  display.h  esp32_s3_matrix.h
example/idf_v5.5.2/main/: CMakeLists.txt  main.c
example/idf_v5.5.2/main/examples/01_Matrix_RGBW/: matrix_rgbw.c  matrix_rgbw.h
example/idf_v5.5.2/main/examples/02_Matrix_Font_5x7/: matrix_font_5x7.c  matrix_font_5x7.h
example/idf_v5.5.2/main/examples/03_Matrix_QMI/: matrix_qmi.c  matrix_qmi.h
example/idf_v5.5.2/main/examples/04_Matrix_RTC/: matrix_rtc.c  matrix_rtc.h
example/idf_v5.5.2/main/examples/05_Matrix_SDCard/: matrix_sdcard.c  matrix_sdcard.h
example/idf_v5.5.2/main/examples/06_Matrix_SHTC3/: matrix_shtc3.c  matrix_shtc3.h
example/idf_v5.5.2/main/examples/07_Matrix_WiFi/: matrix_wifi.c  matrix_wifi.h
example/idf_v5.5.2/main/examples/08_Matrix_Audio/: matrix_audio.c  matrix_audio.h
main/: CMakeLists.txt  main.c
main/examples/All_White/: all_white.c  all_white.h
main/examples/Custom_Font_Display/: custom_font_display.c  custom_font_display.h  lv_font_5x7.c
main/examples/Gradient_Red_Yellow/: gradient_red_yellow.c  gradient_red_yellow.h
main/examples/Matrix_80x40_Demo/: matrix_80x40_demo.c  matrix_80x40_demo.h
main/examples/Matrix_Check_Device/: CMakeLists.txt  device_check.c  device_check.h  ui_page.c
main/examples/SD_Image/: sd_image.c  sd_image.h
(+12 files in other folders)
