idf_component_register(
    SRCS
        "main.c"
        "examples/Matrix_Check_Device/device_check.c"
        "examples/Matrix_Check_Device/ui_page.c"
        "examples/All_White/all_white.c"
        "examples/Gradient_Red_Yellow/gradient_red_yellow.c"
        "examples/Matrix_80x40_Demo/matrix_80x40_demo.c"
        "examples/Custom_Font_Display/custom_font_display.c"
        "examples/Custom_Font_Display/lv_font_5x7.c"
        "examples/SD_Image/sd_image.c"
    INCLUDE_DIRS
        "."
        "examples/Matrix_Check_Device"
        "examples/All_White"
        "examples/Gradient_Red_Yellow"
        "examples/Matrix_80x40_Demo"
        "examples/Custom_Font_Display"
        "examples/SD_Image"
    REQUIRES
        esp32_s3_matrix
        extra_bsp
        Service
)
