idf_component_register(
    SRCS
        "SD_Service/sdcard_service.c"
        "WiFi_Service/wifi_service.c"
        "Sensor_Service/sensor_service.c"
        "Audio_Service/audio_service.c"
        "Key_Service/key_service.c"
        "RTC_Service/rtc_service.c"
    INCLUDE_DIRS
        "SD_Service"
        "WiFi_Service"
        "Sensor_Service"
        "Audio_Service"
        "Key_Service"
        "RTC_Service"
    REQUIRES
        esp32_s3_matrix
        extra_bsp
        driver
        freertos
        esp_timer
)
